2001-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Add a postfix '/' to parent-url.

2001-03-12  Takaaki MORIYAMA  <taka@airlab.cs.ritsumei.ac.jp>

	* w3m.el (w3m-extended-charcters-table): Add '\x80'.

2001-03-12  Masatake YAMATO  <masata-y@is.aist-nara.ac.jp>

	* w3m.el (w3m-view-parent-page): New command.
	(w3m-mode-map): Add `w3m-view-parent-page'.

2001-03-10  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* mime-w3m.el (mime-w3m-message-structure): Make variable buffer
	local at top leve.

2001-03-10  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-entity-alist): Eval at compile time.;
	Add character entity references for ISO 8859-1 characters.

2001-03-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-entity-regexp): New constant.
	(w3m-fontify): Use `w3m-entity-regexp'.
	(w3m-entity-value): Use defsubst, and fix typo.
	(w3m-decode-anchor-string): New function.
	(w3m-fontify-anchors): Decode `&amp;' exists in URL string.

2001-03-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-create-image) [EMACS21,XEMACS]: Guard against error.

	* mew-w3m.el (mew-w3m-auto-insert-image): New variable.
	(mew-mime-text/html-w3m): Bind 'w3m-display-inline-image' with
	'mew-w3m-auto-insert-image'.
	(mew-w3m-cid-retrieve): New function. Fix wrong guess.

2001-03-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-mode-map): Add `w3m-close-window',
	`w3m-view-source', `w3m-view-header', and `w3m-history'.  Keybind
	of `w3m-quit' is changed.
	(w3m-close-window, w3m-about-source, w3m-view-source,
	w3m-about-header, w3m-view-header, w3m-about-history,
	w3m-history): New functions.

	* mime-w3m.el (mime-put-keymap-region): Removed.
	(mime-w3m-save-background-color): Old name is
	`mime-save-background-color'.
	(mime-w3m-mode-map): Add workaround for `w3m-close-window',
	`w3m-view-source', `w3m-view-header', and `w3m-history'.
